--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,23 +1,152 @@
-body {
+* {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-
-  header {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
+  html, body{
+    height:100%;
+    width: 100%;
   }
 
-  header nav a {
-    color: white;
-    margin: 0 15px;
-    text-decoration: none;
+.main {
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+}
+
+nav {
+  height : 70px;
+  width: 100%;
+  border-bottom: 2px solid #dadada;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 4vw;
+}
+.nav2 {
+  display: flex;
+  align-items: center;
+  gap: 4vw;
+}
+nav h2{
+  font-size: 1.5vw;
+  font-weight: 700;
+}
+nav h4{
+  font-size: 1vw;
+}
+nav i {
+  font-weight: 600;
+  display: none;
+}
+nav button {
+  font-size: 1vw;
+  padding: 0.7vw 1.4vw;
+  background-color: #385A64;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+
+}
+.content{
+  height: calc(100vh - 70px);
+  width : 100%;
+  display: flex;
+  position: relative;
+}
+.left {
+  height: 100%;
+  width: 55%;
+  padding: 5vw 4vw
+}
+.left h1 {
+  font-size: 4vw;
+  line-height: 4.2vw;
+}
+.left h1 span{
+  color: #C17460;
+}
+.left p{
+  font-size: 1.2vw;
+  font-weight: 600;
+  color: #666;
+  width :80%;
+  margin-top: 1.5vw;
+  margin-bottom: 4vw;
+}
+.content button {
+  font-size: 1.2vw;
+  padding: 1vw 2vw;
+  background-color: #C17460;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+}
+
+
+.right {
+  height: 100%;
+  width: 45%;
+}
+.right img {
+  height: 100%;
+  width: 100%;
+}
+
+
+
+@media (max-width:600px) {
+  nav{
+    height: 60px;
+    padding: 0 6vw
+
   }
+  nav h2{
+    font-size: 5.1vw;
+  }
+  nav h4{
+    font-size: 4vw;
+    display: none
+  }
+  nav button {
+    display: none
+  }
+  nav i{
+    display: block;
+    font-size: 4.5vw;
+  }
+  .content {
+    height: calc(100vh-60px);
+    flex-direction: column;
+  }
+  .left {
+    width:100%;
+    height: 45%;
+    padding: 4vw 6vw;
+  }
+  .left h1{
+    font-size: 9vw;
+    line-height: 11vw;
 
-  section {
-    padding: 20px;
+  }
+  .left p{
+  font-size: 3vw;
+  width: 90%;
+  margin-top: 5vw;
+  margin-bottom: 6vw;
+  }
+  .right {
+    width:100%;
+    height: 55%;
+  }
+  .content button{
+    padding: 3vw 6vw;
+    border-radius: 3px;
+    font-weight: 600;
+    font-size: 3vw;
 
+  }
+}
